fixed layout issues with navbar

--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -1,5 +1,5 @@
 nav.navbar {
-    height: 51px;
+    height: 55px;
     margin: 0;
     background-color: $primary-color;
     a {
@@ -7,9 +7,25 @@ nav.navbar {
         text-transform: uppercase;
         font-size: 16px;
     }
+    .logo-wrapper {
+        background-color: #fff;
+        height: 5rem;
+        width: 5rem;
+        border-radius: 50%;
+        margin: auto;
+    }
+    .logo {
+        height: 5rem;
+        width: 5rem;
+        display: inline;
+        background-color: #fff;
+    }
     .navbar-brand {
+        height:100%;
+        padding-top: 2.5px;
         text-transform: none;
-        i {
+        font-size: 24px
+       /*  i {
             transition: inherit;
             color: #fff;
             transform: scale(1);
@@ -17,7 +33,7 @@ nav.navbar {
         &:hover i {
             color: rgb(255, 111, 111);
             transform: scale(1.35);
-        }
+        } */
     }
     .navbar-nav.nav {
         li:hover {
