--- a/_sass/_services.scss
+++ b/_sass/_services.scss
@@ -1,3 +1,3 @@
 ul.nav.nav-tabs {
-    backround-color: $primary-color;
+    background-color: $primary-color;
 }
